# P2P-Federated-Learning

./: .env.example  .env.example.bootstrap  .env.example.client  .env.example.trainer1  .env.example.trainer2  .gitignore  Makefile  README.md  a.py  b.py  downloaded-myfile.txt  generate_proto.py  logs.py  pyproject.toml  setup-doc.md
akave/: mcache.py  ml1_code.py  ml_code.py  upload_file.py
akave/examples/: ml_code.py  pinata_use.py  test_file.md
contracts/: hardhat.config.ts
contracts/contracts/: fed-learn.sol
contracts/metadata/: metadata.json
frontend/: .env.example  README.md  electron-builder.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
hardhat/: package-lock.json  package.json
hardhat/cache/: compile-cache.json
hardhat/metadata/: metadata_fed_learn.json
hardhat/scripts/: deploy.ts
hiero_sdk_python/: Duration.py  __init__.py  _deprecated.py  channels.py  exceptions.py  executable.py  hbar.py  managed_node_address.py  node.py  prng_transaction.py  response_code.py  timestamp.py
hiero_sdk_python/account/: account_create_transaction.py  account_info.py
hiero_sdk_python/address_book/: endpoint.py  node_address.py
hiero_sdk_python/client/: client.py  network.py
hiero_sdk_python/consensus/: topic_delete_transaction.py  topic_id.py  topic_message.py  topic_message_submit_transaction.py
hiero_sdk_python/contract/: ethereum_transaction.py
hiero_sdk_python/crypto/: private_key.py  public_key.py
hiero_sdk_python/file/: file_append_transaction.py  file_create_transaction.py  file_id.py  file_info.py
hiero_sdk_python/logger/: log_level.py  logger.py
hiero_sdk_python/nodes/: node_create_transaction.py  node_update_transaction.py
hiero_sdk_python/query/: account_balance_query.py  account_info_query.py  query.py  token_info_query.py  token_nft_info_query.py  topic_info_query.py  topic_message_query.py  transaction_get_receipt_query.py  transaction_record_query.py
hiero_sdk_python/schedule/: schedule_info.py  schedule_info_query.py
hiero_sdk_python/tokens/: abstract_token_transfer_transaction.py  custom_fee.py  custom_fixed_fee.py  custom_fractional_fee.py  custom_royalty_fee.py  nft_id.py  pending_airdrop_id.py  pending_airdrop_record.py  token_airdrop_transaction.py  token_associate_transaction.py  token_burn_transaction.py  token_cancel_airdrop_transaction.py  token_create_transaction.py  token_delete_transaction.py  token_dissociate_transaction.py  token_freeze_status.py  token_freeze_transaction.py  token_grant_kyc_transaction.py  token_id.py  token_key_validation.py  token_mint_transaction.py  token_nft_info.py  token_transfer.py  (+8 more)
ipfs/: .env.example  mcache.py  upload_file.py  utils.py
ipfs_pinata/: mcache.py
keys/: p2p-1.pem  redme.md
p2p/: README.md  coordinator.py  logs.py  machine_learning.py  mesh_utils.py  runner.py
pinata/: mcache.py
pinata_ipfs/: logs.py
terminal/: a.py  terimnal_interface.py
tests/: a.py  test_mcache.py
(+503 files in other folders)
