[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p2p-fedlearn"
version = "0.1.0"
description = "Federated Learning over P2P network using py-libp2p, IPFS, and Hedera"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "trio>=0.25",
    "pinata==0.0.1",
    "python-dotenv",
    "pytest",
    "rich",
    "trio-util",
    "pandas",
    "scikit-learn"
]

# Extras let you group optional deps
[project.optional-dependencies]
p2p = [
    "libp2p @ git+https://github.com/libp2p/py-libp2p.git",
]
dev = [
    "black",
    "isort",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["p2p"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["."]
log_cli = true
log_cli_level = "INFO"

# Ruff config
[tool.ruff]
line-length = 150
target-version = "py313"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (includes unused imports/variables)
]
ignore = []
fix = true

[tools.ruff.lint]
select = ["F401", "F841"] # unused import, unused variable

[tool.ruff.format]
quote-style = "double"
indent-style = "space"